# gfa-reader

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: bench.rs
data/: testGraph_1.1.gfa  testGraph_complex.gfa
src/: lib.rs  logging.rs
tests/: lib1.rs
