[package]
name = "gfa-reader"
version = "0.1.3"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]

edition = "2018"
license = "MIT"
description = "Reading gfa format v1"
repository = "https://github.com/MoinSebi/gfaR"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false