[package]
name = "gfa-reader"
version = "0.1.4"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]

edition = "2018"
license = "MIT"
description = "Reading gfa format v1"
repository = "https://github.com/MoinSebi/gfa-reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
rand = "0.8.5"
rayon = "1.6.1"
flate2 = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[test]]
name = "tests"
path = "tests/lib1.rs"


[profile.test]
debug = true